# smarthome

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: view_progress_bg.xml
app/src/main/res/layout/: activity_add_device.xml  activity_air_conditioner.xml  activity_auto_config_wifi.xml  activity_camera.xml  activity_camera_surface.xml  activity_curtains.xml  activity_device_control.xml  activity_login.xml  activity_main.xml  activity_manual.xml  activity_refrigerator.xml  activity_register.xml  activity_remote_camera.xml  activity_smart_light.xml  activity_soft_apconfig.xml  activity_switch.xml  activity_television.xml  activity_water_heater.xml  activity_wifi_config.xml  add_device_header.xml  add_device_item.xml  home_item.xml  (+2 more)
device/: build.gradle
device/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
library-core/: build.gradle
library-core/buildout/outputs/logs/: manifest-merger-debug-report.txt
library-ui/: build.gradle
library-ui/buildout/outputs/logs/: manifest-merger-debug-report.txt
librtmp/: build.gradle
librtmpsdk/: build.gradle
librtmpsdk/libs/: rtmp-client-release.aar
librtmpsdk/src/main/: AndroidManifest.xml
rtmpdevice/: .gitignore  build.gradle
rtmpdevice/src/main/: AndroidManifest.xml
rtmpdevice/src/main/cpp/: CMakeLists.txt  rtmp_interface.cpp  rtmp_interface.h  rtmp_jni.cpp  rtmp_jni.h
rtmpdevice/src/main/cpp/include/librtmp/: rtmp.h
rtmpdevice/src/main/cpp/librtmp/: rtmp.c  rtmp.h
zxinglib/: build.gradle
(+427 files in other folders)
